<resources>
    <string name="app_name">Chatter</string>
    <string name="open_chat">Pick User</string>
    <string name="back_button_icon">Back Button Icon</string>
    <string name="message">Message</string>
    <string name="emoji_icon">Emoji Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="send_button">Send Button</string>
    <string name="seen_icon">Seen Icon</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign IN</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">Register</string>
    <string name="user_image">User Image</string>
</resources>