<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_50"
    tools:context=".Activities.RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/green_800"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            android:contentDescription="@string/logo"
            android:src="@drawable/whatsapp_logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/green_500"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textColor="@color/grey_40" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_600"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/edit_text_cursor_color"
                    android:background="@drawable/corner_round_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/phone_number"
                    android:textAllCaps="true"
                    android:textColor="@color/grey_40" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_600"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textCursorDrawable="@drawable/edit_text_cursor_color"
                    android:background="@drawable/corner_round_button"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/button_rounded_primary"
                    android:backgroundTint="@color/green_700"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:text="@string/have_an_account" />

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/login"
                        android:padding="1dp"
                        android:textColor="@color/colorPrimaryLight"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/green_A700"/>

</RelativeLayout>