<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#075E54"
        app:contentInsetStartWithNavigation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/woman"
                android:layout_marginEnd="6dp"
                android:background="?attr/selectableItemBackground"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/userNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#C5C5C5"/>

            </LinearLayout>

        </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:scrollbars="vertical"
            android:scrollingCache="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/messageAreaLayout"/>

        <LinearLayout
            android:id="@+id/messageAreaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium"
            android:layout_alignParentBottom="true">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="18dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/spacing_small"
                    android:paddingRight="@dimen/spacing_small">

                    <ImageView
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:background="?selectableItemBackground"
                        android:padding="@dimen/spacing_middle"
                        android:src="@drawable/emoji_icon"
                        android:contentDescription="@string/emoji_icon" />

                    <EditText
                        android:id="@+id/messageText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/message"
                        android:imeOptions="actionSearch"
                        android:padding="@dimen/spacing_middle"
                        android:autofillHints="text"
                        android:inputType="textMultiLine" />

                    <ImageView
                        android:layout_width="@dimen/spacing_xmlarge"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/spacing_middle"
                        android:src="@drawable/ic_baseline_camera_alt_24"
                        android:contentDescription="@string/camera_icon" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/send_button"
                app:srcCompat="@drawable/mice_icon"
                app:tint="@color/white"
                app:rippleColor="#FFFFFF"
                app:fabSize="mini"
                app:useCompatPadding="false"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>